Style: Fix site layout
There were all sorts of issues with background colors and things
overlapping and doing other ugly things. Since I don't understand web
development very well, the easiest fix was to make the site plain white.

Note that these code changes are not very clean, and a lot of now
outdated code is still in the code base. I consider this a temporary
fix.

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -33,14 +33,6 @@
   }
 
   .hero {
-    background-color: $lightGrey;
-    background: $lightGrey url(/img/hero-bg.jpg) no-repeat bottom center;
-    $doubleDensity {
-      background: $lightGrey url(/img/hero-bg@2x.jpg) no-repeat bottom center;
-    }
-    $tripleDensity {
-      background: $lightGrey url(/img/hero-bg@3x.jpg) no-repeat bottom center;
-    }
     background-size: contain;
     padding-bottom: $large;
     position: relative;
@@ -78,7 +70,7 @@
     }
 
     h1 {
-      color: white;
+      color: $darkGrey;
       text-align: center;
       width: 100%;
 
@@ -108,7 +100,7 @@
     textarea,
     input::placeholder,
     textarea::placeholder {
-      color: white;
+      color: $darkGrey;
     }
 
     input,
