--- a/src/css/imports/footer.css
+++ b/src/css/imports/footer.css
@@ -10,6 +10,7 @@
   box-shadow: 0 250px 0 $lightestGrey;
   padding: $xxl $small $large $small;
   position: relative;
+  bottom: 0;
   z-index: 3;
 
   @media screen and (min-width: $mobile) {
