--- a/src/css/imports/header.css
+++ b/src/css/imports/header.css
@@ -1,5 +1,6 @@
 #header {
   background: white;
+  color: white;
   background: rgba(255,255,255,0.98);
   box-shadow: 0 0 $tiny rgba(0,0,0,0.1);
   box-sizing: border-box;
@@ -31,7 +32,7 @@
     }
 
     .nav-link {
-      color: white;
+      color: $darkGrey;
     }
   }
 
